# cad-net-partition

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  flake.nix
.github/workflows/: build.yml
docs/: Makefile  README.md  frontmatter.md
docs/filters/: image-size.lua
docs/templates/: eisvogel.latex
src/: config.cpp  config.hpp  cost.cpp  cost.hpp  data.cpp  data.hpp  io.cpp  io.hpp  main.cpp  partition.cpp  partition.hpp  sa.cpp  sa.hpp  starting_partition.cpp  starting_partition.hpp
testcases/advanced/: ISPD98_ibm01.in  ISPD98_ibm02.in  ISPD98_ibm03.in  ISPD98_ibm08.in  ISPD98_ibm09.in  case00.in
testcases/basic/: ISPD98_ibm01.in  ISPD98_ibm02.in  ISPD98_ibm03.in  ISPD98_ibm08.in  ISPD98_ibm09.in  case00.in
verify/: verify.py
